--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
