feat: Switch to esbuild for frontend bundling
Replaces Vite with esbuild for a more streamlined and faster frontend build process. This change simplifies dependency management and updates build scripts to use esbuild directly. The `package.json` and `tsconfig.json` have been updated to reflect the new build setup. The `index.html` is now configured to load the bundled JavaScript from `dist/bundle.js`. README instructions are updated accordingly.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "a-baba-exchange",
+  "name": "a-baba-exchange-frontend",
+  "version": "1.0.0",
+  "description": "Frontend for A-BABA Exchange",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --define:process.env.NODE_ENV='\"production\"' --minify",
+    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --define:process.env.NODE_ENV='\"development\"' --watch"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "dotenv": "^17.2.3",
-    "pg": "^8.16.3",
-    "process": "^0.11.10"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "esbuild": "^0.21.4",
+    "typescript": "^5.4.5"
   }
 }
