feat: Integrate AI assistant and update dependencies
Adds functionality for an AI assistant by integrating with the Gemini API. This involves changes to the API service to handle streaming responses and updating the import map in `index.html` to include the `@google/genai` library.

Also, refactors the `BettingPage` import to be a named export and adjusts the API base URL to support development and production environments. Minor cleanup of unused imports and whitespace is included.

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "db:setup": "ts-node src/db/setup.ts",
     "db:seed": "ts-node src/db/seed.ts"
   },
   "dependencies": {
+    "@google/genai": "^0.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
