feat: Implement code-splitting with lazy loading
Adopted code-splitting techniques by introducing lazy loading for page components. This change improves initial load times and application performance by only loading necessary code on demand.

Updated `esbuild` configuration in `package.json` to support module splitting and set the output directory to `dist`. The `index.html` script tag was adjusted to reflect the new output file structure.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Frontend for A-BABA Exchange",
   "private": true,
   "scripts": {
-    "build": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --define:process.env.NODE_ENV='\"production\"' --minify",
-    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --define:process.env.NODE_ENV='\"development\"' --watch"
+    "build": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"production\"' --minify",
+    "dev": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"development\"' --watch"
   },
   "dependencies": {
     "react": "^18.3.1",
