--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Frontend for A-BABA Exchange",
   "private": true,
   "scripts": {
-    "build": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"production\"' --minify",
-    "dev": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"development\"' --watch"
+    "build:js": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"production\"' --minify",
+    "build:css": "tailwindcss -i ./index.css -o ./dist/styles.css --minify",
+    "build": "npm run build:css && npm run build:js",
+    "watch:js": "esbuild index.tsx --bundle --outdir=dist --splitting --format=esm --loader:.tsx=tsx --define:process.env.NODE_ENV='\"development\"' --watch",
+    "watch:css": "tailwindcss -i ./index.css -o ./dist/styles.css --watch",
+    "dev": "npm-run-all --parallel watch:*"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -15,7 +19,11 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.4",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
